--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Nee a Web Guy | Freelance web design by Albert J Penticoss</title>
+    <title>Need a Web Guy | Freelance web design by Albert J Penticoss</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
